# dscan-windows

./: CMakeLists.txt  README.md  test_crc32c
.github/workflows/: build-and-release.yml
dscan/include/dscan/: BoundedQueue.hpp  BufferPool.hpp  Config.hpp  Crc32c.hpp  Detector.hpp  DiskUtils.hpp  FileReader.hpp  Finding.hpp  Report.hpp  ReviewUI.hpp  ThreadPool.hpp  Verdict.hpp  Walker.hpp
dscan/include/dscan/detectors/: EntropyDetector.hpp  GzipDetector.hpp  IoHashDetector.hpp  JpegDetector.hpp  MagicDetector.hpp  ManifestDetector.hpp  MediaDetectors.hpp  PdfDetector.hpp  PngDetector.hpp  SizeDetector.hpp  ZipDetector.hpp
dscan/include/dscan/platform/: WinSys.hpp
dscan/src/: Config.cpp  Crc32c.cpp  Detector.cpp  DiskUtils.cpp  FileReader.cpp  Report.cpp  ReviewUI.cpp  Walker.cpp  dscan.exe.manifest  dscan.rc  main.cpp
dscan/src/detectors/: EntropyDetector.cpp  GzipDetector.cpp  IoHashDetector.cpp  JpegDetector.cpp  MagicDetector.cpp  ManifestDetector.cpp  MediaDetectors.cpp  PdfDetector.cpp  PngDetector.cpp  SizeDetector.cpp  ZipDetector.cpp
dscan/tests/: test_crc32c  test_crc32c.cpp  test_detectors.cpp  test_path_normalization.cpp  test_verdicts.cpp
miniz_src/: ChangeLog.md
